WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302914
ASSERTION FAILED: m_outputContext in MediaPlaybackTargetContextCocoa::MediaPlaybackTargetContextCocoa
https://bugs.webkit.org/show_bug.cgi?id=302914
Summary
ASSERTION FAILED: m_outputContext in MediaPlaybackTargetContextCocoa::MediaPl...
Andy Estes
Reported
2025-11-20 21:04:21 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-20 21:04:28 PST
<
rdar://problem/165184616
>
Andy Estes
Comment 2
2025-11-20 21:11:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54292
EWS
Comment 3
2025-11-21 20:52:40 PST
Committed
303434@main
(cf642dec7e61): <
https://commits.webkit.org/303434@main
> Reviewed commits have been landed. Closing PR #54292 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug